--- a/doc-test/Cargo.toml
+++ b/doc-test/Cargo.toml
@@ -7,7 +7,8 @@ build = "build.rs"
 publish = false
 
 [dependencies]
-mini-redis = "*"
+# mini-redis = "*"
+mini-redis = { path = "/home/carllerche/Code/mini-redis" }
 tokio = { version = "0.2", features = ["full"] }
 bytes = "0.5"
 
