--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "16.13.1",
     "react-markdown": "^4.3.1",
     "react-syntax-highlighter": "^12.2.1",
+    "remark-custom-blocks": "^2.5.0",
     "sass": "^1.26.5"
   },
   "devDependencies": {
