--- a/doc-test/Cargo.toml
+++ b/doc-test/Cargo.toml
@@ -10,6 +10,7 @@ publish = false
 mini-redis = { path = "/home/carllerche/Code/tokio-mini-redis" }
 tokio = { version = "0.2", features = ["full"] }
 bytes = "0.5"
+futures = "0.3"
 doc-comment = "0.3.3"
 
 [build-dependencies]
