--- a/doc-test/Cargo.toml
+++ b/doc-test/Cargo.toml
@@ -12,6 +12,7 @@ tokio = { version = "0.2", features = ["full"] }
 bytes = "0.5"
 futures = "0.3"
 doc-comment = "0.3.3"
+crossbeam = "0.7"
 
 [build-dependencies]
 glob = "0.3"
